hello/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: hello
spec:
  selector:
    app: hello-app
  ports:
  - port: 80
    targetPort: 80
